added link for github

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
         <br />
         <h1>City</h1>
         <h2>Weather</h2>
-        <h3>Temperature</h3>
+        <h3>Temperature 1 C° / F</h3>
         <img src="img/icon.png" alt="partly cloudy" />
-        12
 
         <div class="container">
           <div class="row row-cols-2">
@@ -64,6 +63,11 @@
         </div>
       </div>
     </div>
+    <small>
+      <a href="https://github.com/JuKad/vanilla-weather-app" class="bottom">
+        Open-source code by Juliana Kadlecova
+      </a>
+    </small>
     <script src="script.js"></script>
   </body>
 </html>
