--- a/index.html
+++ b/index.html
@@ -19,55 +19,55 @@
   </head>
   <body>
     <div class="fancy">
-      <nav class="navbar navbar-light bg-light">
-        <form class="form-inline">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-            Search
-          </button>
-        </form>
-      </nav>
-      <br />
+          <nav class="navbar navbar-light bg-light">
+              <form class="form-inline">
+                <input
+                class="form-control mr-sm-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+                />
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                    Search
+                  </button>
+              </form>
+          </nav>
+        <br />
       <h1>City</h1>
       <h2>Weather</h2>
-      <h3>Temperature 1 C° / F</h3>
+      <h3>Temperature : <strong>1 </strong> C° / F</h3>
       <img src="img/icon.png" alt="partly cloudy" />
 
       <div class="container">
-        <div class="row row-cols-2">
-          <div class="col">Wind speed</div>
-          <div class="col">Humidity</div>
-          <div class="col">Dew point</div>
-          <div class="col">Visibility</div>
-        </div>
-      </div>
-      <br />
-      <br />
-      <div class="container">
-        <div data class="daily-container">
-          <div class="row">
-            <div class="col-next">Next DAY</div>
-            <div class="day-list-values"></div>
-            <div class="col-after">DAY after next day</div>
-            <div class="day-list-values"></div>
-            <div class="row-cols-2">2day after</div>
-            <div class="day-list-values"></div>
+        <div class="clearfix">
+          <div class="row row-cols-2">
+            <div class="col">Wind speed</div>
+            <div class="col">Humidity</div>
+            <div class="col">Dew point</div>
+            <div class="col">Visibility</div>
           </div>
         </div>
       </div>
-    </div>
-    <br />
-    <br />
-    <small>
-      <a href="https://github.com/JuKad/vanilla-weather-app" class="bottom">
-        Open-source code by Juliana Kadlecova
-      </a>
-    </small>
-    <script src="script.js"></script>
+      <br />
+      <br />
+        <div data class="daily-container">
+            <div class="row weather-forecast" id="forecast">
+                  <div class="col-2">
+                    <h4> Next DAY </h4>
+                      <img src="https://openweathermap.org/img/wn/04d@2x.png" class="weather-icon">
+                        <div class="weather-forecast-temperature">
+                          <strong> 1° </strong> 0 ° 
+                        </div>
+              <div class="day-list-values"></div>
+            </div>
+
+          <br />
+          <br />
+          <small>
+            <a href="https://github.com/JuKad/vanilla-weather-app" class="bottom">
+            Open-source code by Juliana Kadlecova
+            </a>
+          </small>
+      <script src="script.js"></script>
   </body>
 </html>
