--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link rel="stylesheet" href="style.css" />
     <title>wApp</title>
   </head>
+
   <body>
+
     <div class="fancy">
           <nav class="navbar navbar-light bg-light">
               <form class="form-inline">
@@ -51,6 +53,33 @@
       <br />
       <br />
         <div data class="daily-container">
+            <div class="row weather-forecast" id="forecast">
+                  <div class="col-2">
+                    <h4> Next DAY </h4>
+                      <img src="https://openweathermap.org/img/wn/04d@2x.png" class="weather-icon">
+                        <div class="weather-forecast-temperature">
+                          <strong> 1° </strong> 0 ° 
+                        </div>
+              <div class="day-list-values"></div>
+            </div>
+            <div class="row weather-forecast" id="forecast">
+                  <div class="col-2">
+                    <h4> Next DAY </h4>
+                      <img src="https://openweathermap.org/img/wn/04d@2x.png" class="weather-icon">
+                        <div class="weather-forecast-temperature">
+                          <strong> 1° </strong> 0 ° 
+                        </div>
+              <div class="day-list-values"></div>
+            </div>
+            <div class="row weather-forecast" id="forecast">
+                  <div class="col-2">
+                    <h4> Next DAY </h4>
+                      <img src="https://openweathermap.org/img/wn/04d@2x.png" class="weather-icon">
+                        <div class="weather-forecast-temperature">
+                          <strong> 1° </strong> 0 ° 
+                        </div>
+              <div class="day-list-values"></div>
+            </div>
             <div class="row weather-forecast" id="forecast">
                   <div class="col-2">
                     <h4> Next DAY </h4>
