--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
           <hr />
           <br />
+    </div>
           <small>
             <a href="https://github.com/JuKad/vanilla-weather-app" class="bottom">
             Open-source code by Juliana Kadlecova
