--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
 
-    <div class="fancy">
+    <div class="container-app">
           <nav class="navbar navbar-light bg-light">
               <form class="form-inline">
                 <input
@@ -80,18 +80,7 @@
                         </div>
               <div class="day-list-values"></div>
             </div>
-            <div class="row weather-forecast" id="forecast">
-                  <div class="col-2">
-                    <h4> Next DAY </h4>
-                      <img src="https://openweathermap.org/img/wn/04d@2x.png" class="weather-icon">
-                        <div class="weather-forecast-temperature">
-                          <strong> 1° </strong> 0° 
-                        </div>
-              <div class="day-list-values"></div>
-            </div>
-
           <hr />
-          <br />
           <small>
             <a href="https://github.com/JuKad/vanilla-weather-app" class="bottom">
             Open-source code by Juliana Kadlecova
