html and start of js

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </form>
       </nav>
       <br />
-      <h1>City</h1>
+      <h1 class="city">Tallinn</h1>
       <h2>Weather</h2>
-      <h3>Temperature : <strong>1 </strong> C° / F</h3>
+      <h3>Temperature : <strong> -1 </strong> C° / F</h3>
       <img src="img/icon.png" alt="partly cloudy" />
 
       <div class="container">
