--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>wApp</title>
+    <title> ☁ wApp ☁ </title>
   </head>
 
   <body>
