--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title> ☁ wApp ☁ </title>
+    <title>☁ wApp ☁</title>
   </head>
 
   <body>
@@ -35,18 +35,24 @@
         </form>
       </nav>
       <br />
-      <h1 class="city">Tallinn</h1>
-      <h2>Weather</h2>
-      <h3>Temperature : <strong> -1 </strong> C° / F</h3>
+      <h1 class="current-city"></h1>
+      <li class="current-date"></li>
+      <h2 class="current-weather"></h2>
+      <h3 class="weather-temperature-celsius">
+        <strong> -1 </strong>
+        C° /
+        <li class="weather-temperature-farenheit"></li>
+        F
+      </h3>
       <img src="img/icon.png" alt="partly cloudy" />
 
       <div class="container">
         <div class="clearfix">
           <div class="row row-cols-2">
-            <div class="col">Wind speed</div>
-            <div class="col">Humidity</div>
-            <div class="col">Dew point</div>
-            <div class="col">Visibility</div>
+            <div class="col-wind">Wind speed</div>
+            <div class="col-hum">Humidity</div>
+            <div class="col-dew">Dew point</div>
+            <div class="col-vis">Visibility</div>
           </div>
         </div>
       </div>
@@ -55,7 +61,7 @@
       <div data class="daily-container">
         <div class="row weather-forecast" id="forecast">
           <div class="col-2">
-            <h4>Next DAY</h4>
+            <h4 class="forecast-next">Next DAY</h4>
             <img
               src="https://openweathermap.org/img/wn/04d@2x.png"
               class="weather-icon"
