--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       </nav>
       <br />
       <h1 id="city"></h1>
-      <h2 class="current-date"></h2>
+      <ul>
+        <li>Updated :  <span id="date"> </span>
+        </li>
+      </ul>
       <li id="description">
         <strong id="temperature"> </strong>
         <span class="units">
