changinf elements in html and js

--- a/index.html
+++ b/index.html
@@ -37,39 +37,35 @@
       <br />
       <h1 id="city"></h1>
       <ul>
-        <li>Updated :  <span id="date"> </span>
-        </li>
-      </ul>
+        <li>Updated : <span id="date"> </span></li>
       <li id="description">
-        <strong id="temperature"> </strong>
-        <span class="units">
-          C° /
-          <a href="#"> ° F </a>
-        </span>
+      </ul>  
       </li>
-      <img src="img/icon.png" alt="partly cloudy" />
+      <img src="img/icon.png" alt="partly cloudy" id="icon"/>
 
       <div class="container">
         <div class="row">
-          <div class="row">
-            <ul>
-              <li>
-                Wind speed :
-                <span id="wind"></span> Km/H
-              </li>
-              <li>
-                Humidity:
-                <span id="humidity"></span> %
-              </li>
-              <li>
-                Feels like:
-                <span id="feelsLike"></span> C°
-              </li>
-              <li>
-                Visibility:
-                <span id="visibility"> </span>
-              </li>
-            </ul>
+          <div class="col-6">
+            <div class="clearfix weather-temperature">
+              <ul>
+                <li>
+                  Wind speed :
+                  <span id="wind"></span> Km/H
+                </li>
+                <li>
+                  Humidity:
+                  <span id="humidity"></span> %
+                </li>
+                <li>
+                  Feels like:
+                  <span id="feelsLike"></span> C°
+                </li>
+                <li>
+                  Visibility:
+                  <span id="visibility"> </span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
