--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
       <h1 id="city"></h1>
       <ul>
         <li>Updated : <span id="date"> </span></li>
-      <li id="description">
-      </ul>  
-      </li>
-      <img src="img/icon.png" alt="partly cloudy" id="icon"/>
+        <li id="description"></li>
+      </ul>
+      <img src="" alt="partly cloudy" id="icon" />
 
       <div class="container">
         <div class="row">
