--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <h1 id="city"></h1>
       <ul>
         <li>Updated : <span id="date"> </span></li>
+        <li>
+          <span id="temperature"> °C </span>
+        </li>
         <li id="description"></li>
       </ul>
       <img src="" alt="partly cloudy" id="icon" />
