--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <input
             class="form-control mr-sm-2"
             type="search"
-            placeholder="Search"
+            placeholder="Search a city.."
             aria-label="Search"
           />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" value="search>
             Search
           </button>
         </form>
