--- a/index.html
+++ b/index.html
@@ -23,23 +23,24 @@
     <div class="container-app">
       <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
-          <input
-            class="form-control mr-sm-2"
-            type="search"
-            placeholder="Search a city.."
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" value="search>
-            Search
-          </button>
+            <input
+              class="form-control mr-sm-2"
+              type="search"
+              placeholder="Search"
+            />
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+              Search
+            </button>
         </form>
       </nav>
       <br />
       <h1 id="city"></h1>
       <ul>
         <li>Updated : <span id="date"> </span></li>
-        <li>
-          <span id="temperature"> °C </span>
+        <li> 
+          <span id="temperature"> 
+            °C 
+          </span> 
         </li>
         <li id="description"></li>
       </ul>
